--- a/addendum/sagemaker/sage-r.yml
+++ b/addendum/sagemaker/sage-r.yml
@@ -85,7 +85,7 @@ dependencies:
   - nlopt=2.7.1=py38hd719023_0
   - numpy=1.22.3=py38h99721a1_2
   - openjdk=11.0.1=h600c080_1018
-  - openssl=1.1.1n=h166bdaf_0
+  - openssl=1.1.1o=h166bdaf_0
   - pandoc=2.18=ha770c72_0
   - pango=1.48.10=h54213e6_2
   - pcre=8.45=h9c3ff4c_0
@@ -206,7 +206,7 @@ dependencies:
   - r-hms=1.1.1=r41hc72bb7e_0
   - r-htmltools=0.5.2=r41h03ef668_0
   - r-htmlwidgets=1.5.4=r41hc72bb7e_0
-  - r-httr=1.4.2=r41hc72bb7e_0
+  - r-httr=1.4.3=r41hc72bb7e_0
   - r-ids=1.0.1=r41hc72bb7e_1
   - r-igraph=1.3.0=r41hf10d5bd_0
   - r-ini=0.3.1=r41hc72bb7e_1003
@@ -409,7 +409,7 @@ dependencies:
     - google-auth==2.6.6
     - google-auth-oauthlib==0.4.6
     - google-pasta==0.2.0
-    - grpcio==1.44.0
+    - grpcio==1.46.0
     - h5py==3.6.0
     - idna==3.3
     - importlib-metadata==4.11.3
@@ -435,7 +435,7 @@ dependencies:
     - tensorboard==2.8.0
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.1
-    - tensorflow-gpu==2.8.0
+    - tensorflow==2.8.0
     - tensorflow-hub==0.12.0
     - tensorflow-io-gcs-filesystem==0.25.0
     - termcolor==1.1.0
