--- a/addendum/sagemaker/sage-python.yml
+++ b/addendum/sagemaker/sage-python.yml
@@ -25,7 +25,6 @@ dependencies:
   - blinker=1.4=py_1
   - brotli=1.0.9=h166bdaf_7
   - brotli-bin=1.0.9=h166bdaf_7
-  - brotlipy=0.7.0=py38h0a891b7_1004
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2022.4.26=h06a4308_0
@@ -34,11 +33,10 @@ dependencies:
   - cachetools=5.0.0=pyhd8ed1ab_0
   - cairo=1.16.0=h6cf1ce9_1008
   - certifi=2021.10.8=py38h06a4308_2
-  - cffi=1.14.6=py38ha65f79e_0
   - cftime=1.6.0=py38h71d37f0_1
   - charset-normalizer=2.0.12=pyhd8ed1ab_0
   - click=8.1.3=py38h578d9bd_0
-  - colorama=0.4.4=pyh9f0ad1d_0
+  - colorama=0.4.4=pyhd3eb1b0_0
   - convertdate=2.4.0=pyhd8ed1ab_0
   - cryptography=36.0.2=py38h2b5fc30_1
   - cudatoolkit=11.6.0=habf752d_10
@@ -46,7 +44,7 @@ dependencies:
   - curl=7.83.0=h7bff187_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - cython=0.29.28=py38hfa26641_2
-  - dbus=1.13.6=h48d8840_2
+  - dbus=1.13.18=hb2f20db_0
   - debugpy=1.6.0=py38hfa26641_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - dill=0.3.4=pyhd8ed1ab_0
@@ -63,7 +61,7 @@ dependencies:
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
   - fonttools=4.33.3=py38h0a891b7_0
-  - freetype=2.10.4=h0708190_1
+  - freetype=2.11.0=h70c0345_0
   - fribidi=1.0.10=h36c2ea0_0
   - frozenlist=1.3.0=py38h0a891b7_1
   - future=0.18.2=py38_1
@@ -73,7 +71,7 @@ dependencies:
   - gdk-pixbuf=2.42.6=h04a7f16_0
   - gettext=0.19.8.1=h0b5b191_1005
   - giflib=5.2.1=h36c2ea0_2
-  - glib=2.68.4=h9c3ff4c_0
+  - glib=2.69.1=h4ff587b_1
   - glib-tools=2.68.4=h9c3ff4c_0
   - google-auth=2.6.6=pyh6c4a22f_0
   - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
@@ -97,7 +95,7 @@ dependencies:
   - hijri-converter=2.2.3=pyhd8ed1ab_0
   - holidays=0.13=pyhd8ed1ab_0
   - icu=68.2=h9c3ff4c_0
-  - idna=3.3=pyhd8ed1ab_0
+  - idna=3.3=pyhd3eb1b0_0
   - importlib-metadata=4.11.3=py38h578d9bd_1
   - importlib_metadata=4.11.3=hd8ed1ab_1
   - ipykernel=6.13.0=py38h7f3c49e_0
@@ -145,7 +143,7 @@ dependencies:
   - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.20=pthreads_h78a6416_0
   - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.37=h21135ba_2
+  - libpng=1.6.37=hbc83047_0
   - libpq=13.5=hd57d9b9_1
   - libprotobuf=3.16.0=h780b84a_0
   - librsvg=2.50.5=hc3c00ef_0
@@ -159,7 +157,7 @@ dependencies:
   - libvorbis=1.3.7=h9c3ff4c_0
   - libwebp=1.2.2=h3452ae3_0
   - libwebp-base=1.2.2=h7f98852_1
-  - libxcb=1.13=h7f98852_1004
+  - libxcb=1.14=h7b6447c_0
   - libxgboost=1.5.1=cpu_h3d145d1_2
   - libxkbcommon=1.0.3=he3ba5ed_0
   - libxml2=2.9.10=h72842e0_4
@@ -169,7 +167,7 @@ dependencies:
   - lunarcalendar=0.0.9=py_0
   - lxml=4.8.0=py38h0a891b7_3
   - lz4-c=1.9.3=h9c3ff4c_1
-  - markdown=3.3.6=pyhd8ed1ab_0
+  - markdown=3.3.7=pyhd8ed1ab_0
   - matplotlib=3.5.2=py38h578d9bd_0
   - matplotlib-base=3.5.2=py38h826bfd8_0
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
@@ -183,11 +181,10 @@ dependencies:
   - netcdf4=1.5.7=nompi_py38hcc16cfe_101
   - nspr=4.32=h9c3ff4c_1
   - nss=3.77=h2350873_0
-  - numpy=1.19.5=py38h8246c76_3
   - oauthlib=3.2.0=pyhd8ed1ab_0
-  - openjdk=8.0.312=h7f98852_0
+  - openjdk=11.0.13=h87a67e3_0
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1n=h7f8727e_0
+  - openssl=1.1.1o=h166bdaf_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
   - packaging=21.3=pyhd8ed1ab_0
   - pandarallel=1.6.1=pyhd8ed1ab_0
@@ -195,7 +192,7 @@ dependencies:
   - pango=1.48.10=h54213e6_2
   - parso=0.8.3=pyhd8ed1ab_0
   - patsy=0.5.2=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
+  - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
   - pillow=9.1.0=py38h0ee0e06_2
@@ -211,18 +208,18 @@ dependencies:
   - py-xgboost=1.5.1=cpu_py38h66f0ec1_2
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.21=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.12.0=pyhd8ed1ab_0
   - pyjwt=2.3.0=pyhd8ed1ab_1
   - pymeeus=0.5.10=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.8=pyhd8ed1ab_0
   - pyqt=5.12.3=py38h578d9bd_8
   - pyqt-impl=5.12.3=py38h0ffb2e6_8
   - pyqt5-sip=4.19.18=py38h709712a_8
   - pyqtchart=5.12=py38h7400c14_8
   - pyqtwebengine=5.12.1=py38h7400c14_8
-  - pysocks=1.7.1=py38h578d9bd_5
+  - pysocks=1.7.1=py38h06a4308_0
   - pystan=2.19.1.1=py38hc5bc63f_2
   - python=3.8.8=hffdb5ce_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
@@ -235,7 +232,7 @@ dependencies:
   - qt=5.12.9=hda022c4_4
   - re2=2021.09.01=h9c3ff4c_0
   - readline=8.1=h46c0cb4_0
-  - requests=2.27.1=pyhd8ed1ab_0
+  - requests=2.27.1=pyhd3eb1b0_0
   - requests-oauthlib=1.3.1=pyhd8ed1ab_0
   - rsa=4.8=pyhd8ed1ab_0
   - scikit-learn=1.0.2=py38h1561384_0
@@ -244,8 +241,8 @@ dependencies:
   - seaborn-base=0.11.2=pyhd8ed1ab_0
   - setuptools=49.6.0=py38h578d9bd_3
   - six=1.15.0=pyh9f0ad1d_0
-  - snappy=1.1.8=he1b5a44_3
-  - sqlite=3.38.3=h4ff8645_0
+  - snappy=1.1.9=hbd366e4_0
+  - sqlite=3.38.4=h4ff8645_0
   - stack_data=0.2.0=pyhd8ed1ab_0
   - statsmodels=0.13.2=py38h6c62de6_0
   - sysroot_linux-64=2.12=he073ed8_15
@@ -266,9 +263,9 @@ dependencies:
   - typing-extensions=3.7.4.3=0
   - typing_extensions=3.7.4.3=py_0
   - unicodedata2=14.0.0=py38h0a891b7_1
-  - urllib3=1.26.9=pyhd8ed1ab_0
+  - urllib3=1.26.9=py38h06a4308_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
-  - werkzeug=2.1.2=pyhd8ed1ab_0
+  - werkzeug=2.1.2=pyhd8ed1ab_1
   - wheel=0.37.1=pyhd8ed1ab_0
   - wrapt=1.12.1=py38h497a2fe_3
   - xarray=2022.3.0=pyhd8ed1ab_0
@@ -291,7 +288,10 @@ dependencies:
   - zlib=1.2.11=h166bdaf_1014
   - zstd=1.5.2=ha95c52a_0
   - pip:
+    - brotlipy==0.7.0
+    - cffi==1.14.6
     - colourmap==1.1.4
+    - numpy==1.19.5
     - pca==1.8.0
     - scatterd==1.1.1
     - sklearn==0.0
