--- a/addendum/sagemaker/sage-r.yml
+++ b/addendum/sagemaker/sage-r.yml
@@ -7,7 +7,6 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - _r-mutex=1.0.1=anacondar_1
   - _r-xgboost-mutex=2.0=cpu_0
-  - alsa-lib=1.1.5=h516909a_1002
   - binutils_impl_linux-64=2.36.1=h193b22a_2
   - binutils_linux-64=2.36=hf3e587d_9
   - bwidget=1.9.14=ha770c72_1
@@ -31,7 +30,6 @@ dependencies:
   - gettext=0.19.8.1=h0b5b191_1005
   - gfortran_impl_linux-64=9.4.0=h0003116_16
   - gfortran_linux-64=9.4.0=hf0ab688_9
-  - giflib=5.2.1=h36c2ea0_2
   - gmp=6.2.1=h58526e2_0
   - graphite2=1.3.13=h58526e2_1001
   - gsl=2.7=he838d99_0
@@ -44,7 +42,6 @@ dependencies:
   - kernel-headers_linux-64=2.6.32=he073ed8_15
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.19.3=h3790be6_0
-  - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
   - lerc=3.0=h9c3ff4c_0
   - libblas=3.9.0=14_linux64_openblas
@@ -84,7 +81,7 @@ dependencies:
   - ncurses=6.3=h27087fc_1
   - nlopt=2.7.1=py38hd719023_0
   - numpy=1.22.3=py38h99721a1_2
-  - openjdk=11.0.1=h600c080_1018
+  - openjdk=11.0.1=h516909a_1016
   - openssl=1.1.1o=h166bdaf_0
   - pandoc=2.18=ha770c72_0
   - pango=1.48.10=h54213e6_2
@@ -170,7 +167,7 @@ dependencies:
   - r-foreach=1.5.2=r41hc72bb7e_0
   - r-foreign=0.8_82=r41hcfec24a_0
   - r-fs=1.5.2=r41h7525677_1
-  - r-furrr=0.2.3=r41hc72bb7e_0
+  - r-furrr=0.3.0=r41hc72bb7e_0
   - r-future=1.25.0=r41hc72bb7e_0
   - r-future.apply=1.9.0=r41hc72bb7e_0
   - r-gargle=1.2.0=r41hc72bb7e_0
@@ -372,12 +369,10 @@ dependencies:
   - r-zoo=1.8_10=r41h06615bd_0
   - readline=8.1=h46c0cb4_0
   - sed=4.8=he412f7d_0
-  - sqlite=3.38.3=h4ff8645_0
+  - sqlite=3.38.4=h4ff8645_0
   - sysroot_linux-64=2.12=he073ed8_15
   - tk=8.6.12=h27826a3_0
   - tktable=2.10=hb7b940f_3
-  - xorg-fixesproto=5.0=h7f98852_1002
-  - xorg-inputproto=2.3.2=h7f98852_1002
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.0.10=h7f98852_0
   - xorg-libsm=1.2.3=hd9c2040_1000
@@ -385,12 +380,8 @@ dependencies:
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxfixes=5.0.3=h7f98852_1004
-  - xorg-libxi=1.7.10=h7f98852_0
   - xorg-libxrender=0.9.10=h7f98852_1003
   - xorg-libxt=1.2.1=h7f98852_2
-  - xorg-libxtst=1.2.3=h7f98852_1002
-  - xorg-recordproto=1.14.2=h7f98852_1002
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h7f98852_1002
   - xorg-xproto=7.0.31=h7f98852_1007
@@ -416,7 +407,7 @@ dependencies:
     - keras==2.8.0
     - keras-preprocessing==1.1.2
     - libclang==14.0.1
-    - markdown==3.3.6
+    - markdown==3.3.7
     - oauthlib==3.2.0
     - opt-einsum==3.3.0
     - pandas==1.4.2
